# anomalydetection_app

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/: test_installation.yml
.github/workflows/: test_installation.yml
anomalydetection_app/: app.py  fileio.py  helpers.py  inspect_element.py  plots.py  simulate.py
tests/: test_fileio.py
