[tool.poetry]
name = "anomalydetection_app"
version = "0.2.0"
description = "Time series anomaly detection experimentation and visualization."
authors = ["laurafroelich <lafr@dhigroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
dash = "^1.18.1"
plotly = "^4.14.3"
pandas = "^1.2.0"
dash-bootstrap-components = "^0.11.1"
anomalydetection = {git = "https://github.com/DHI/anomalydetection.git", branch="main"}
numpy = "^1.19.5"
pyarrow = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
